WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268400
[visionOS] Payment sheet not showing up when a view service tries to present it on a host application owned scene
https://bugs.webkit.org/show_bug.cgi?id=268400
Summary
[visionOS] Payment sheet not showing up when a view service tries to present ...
Abrar Rahman Protyasha
Reported
2024-01-30 11:39:20 PST
PKPaymentAuthorizationController needs to be vended a scene ID and bundle ID pair that correspond to each other for it to successfully present a payment sheet on a scene. Unfortunately, when there is an embedded view service in a host application, we: 1. Supply a bogus scene ID because view services don't have an associated scene ID. 2. Supply the bundle identifier of the view service and not the hosting application, which actually owns the scene to be presented in. Let's fix this mismatch.
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-01-30 11:39:40 PST
rdar://121673521
Abrar Rahman Protyasha
Comment 2
2024-01-30 11:43:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23529
EWS
Comment 3
2024-01-30 17:51:56 PST
Committed
273801@main
(d9d8f6844b91): <
https://commits.webkit.org/273801@main
> Reviewed commits have been landed. Closing PR #23529 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug