Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp
@@ -1302,18 +1302,6 @@ void NetworkProcessProxy::setManagedDomainsForResourceLoadStatistics(PAL::Sessio
 }
 #endif
 
-#if ENABLE(APPLE_PAY_REMOTE_UI_USES_SCENE)
-void NetworkProcessProxy::getWindowSceneIdentifierForPaymentPresentation(WebPageProxyIdentifier webPageProxyIdentifier, CompletionHandler<void(const String&)>&& completionHandler)
-{
-    auto page = WebProcessProxy::webPage(webPageProxyIdentifier);
-    if (!page) {
-        completionHandler(nullString());
-        return;
-    }
-    completionHandler(page->pageClient().sceneID());
-}
-#endif
-
 void NetworkProcessProxy::setShouldDowngradeReferrerForTesting(bool enabled, CompletionHandler<void()>&& completionHandler)
 {
     if (!canSendMessage()) {
