Source/WebKit/UIProcess/Network/NetworkProcessProxyCocoa.mm
@@ -28,7 +28,12 @@
 
 #import "LaunchServicesDatabaseXPCConstants.h"
 #import "NetworkProcessMessages.h"
+#import "PageClient.h"
+#import "WKUIDelegatePrivate.h"
+#import "WKWebViewInternal.h"
+#import "WebPageProxy.h"
 #import "WebProcessPool.h"
+#import "WebProcessProxy.h"
 #import "XPCEndpoint.h"
 #import <wtf/EnumTraits.h>
 
@@ -121,6 +126,29 @@ void NetworkProcessProxy::setBackupExclusionPeriodForTesting(PAL::SessionID sess
     sendWithAsyncReply(Messages::NetworkProcess::SetBackupExclusionPeriodForTesting(sessionID, period), WTFMove(completionHandler));
 }
 
+#endif
+
+#if ENABLE(APPLE_PAY_REMOTE_UI_USES_SCENE)
+void NetworkProcessProxy::getWindowSceneAndBundleIdentifierForPaymentPresentation(WebPageProxyIdentifier webPageProxyIdentifier, CompletionHandler<void(const String&, const String&)>&& completionHandler)
+{
+    auto sceneIdentifier = nullString();
+    auto bundleIdentifier = WebCore::applicationBundleIdentifier();
+    auto page = WebProcessProxy::webPage(webPageProxyIdentifier);
+    if (!page) {
+        completionHandler(sceneIdentifier, bundleIdentifier);
+        return;
+    }
+
+    sceneIdentifier = page->pageClient().sceneID();
+    RetainPtr<WKWebView> webView = page->cocoaView();
+    id webViewUIDelegate = [webView UIDelegate];
+    if ([webViewUIDelegate respondsToSelector:@selector(_hostSceneIdentifierForWebView:)])
+        sceneIdentifier = [webViewUIDelegate _hostSceneIdentifierForWebView:webView.get()];
+    if ([webViewUIDelegate respondsToSelector:@selector(_hostSceneBundleIdentifierForWebView:)])
+        bundleIdentifier = [webViewUIDelegate _hostSceneBundleIdentifierForWebView:webView.get()];
+
+    completionHandler(sceneIdentifier, bundleIdentifier);
+}
 #endif
 
 }
